add support for ARD (Apple Remote Desktop) authentication

- it does not fail silently while authenticate (blue background forever))
- minor fixes for VNC plugin qt-only version

BUG: 274091

svn path=/trunk/KDE/kdenetwork/krdc/; revision=1330943